--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ release-stable:
     - make production GIT_BRANCH=$CI_COMMIT_BRANCH VERSION=1.2.7 # update the version on each release
     - make check_production_conf_compatible
     - make pub_conf_samples
-    - make production_image
+    - make production_image GIT_BRANCH=$CI_COMMIT_BRANCH VERSION=1.2.7
   tags:
     - cloudcare-ft
 
@@ -52,9 +52,8 @@ release-unstable:
     - make lint
     - make all_test
     - make production GIT_BRANCH=$CI_COMMIT_BRANCH VERSION=1.3.0
-    - make production_image VERSION=1.3.0
     - make check_production_conf_compatible
-    - make production_image
+    - make production_image VERSION=1.3.0
   tags:
     - cloudcare-ft
 
