--- a/datakit.yaml.template
+++ b/datakit.yaml.template
@@ -186,6 +186,8 @@ spec:
       restartPolicy: Always
       serviceAccount: datakit
       serviceAccountName: datakit
+      tolerations:
+      - operator: Exists
       volumes:
       - configMap:
           name: datakit-conf
