--- a/install.sh.template
+++ b/install.sh.template
@@ -312,6 +312,52 @@ if [ -n "$DK_GIN_LOG" ]; then
   gin_log=$DK_GIN_LOG
 fi
 
+
+sink_metric=""
+if [ -n "$DK_SINK_M" ]; then
+  sink_metric=$DK_SINK_M
+fi
+
+sink_network=""
+if [ -n "$DK_SINK_N" ]; then
+  sink_network=$DK_SINK_N
+fi
+
+sink_keyevent=""
+if [ -n "$DK_SINK_K" ]; then
+  sink_keyevent=$DK_SINK_K
+fi
+
+sink_object=""
+if [ -n "$DK_SINK_O" ]; then
+  sink_object=$DK_SINK_O
+fi
+
+sink_custom_object=""
+if [ -n "$DK_SINK_CO" ]; then
+  sink_custom_object=$DK_SINK_CO
+fi
+
+sink_logging=""
+if [ -n "$DK_SINK_L" ]; then
+  sink_logging=$DK_SINK_L
+fi
+
+sink_tracing=""
+if [ -n "$DK_SINK_T" ]; then
+  sink_tracing=$DK_SINK_T
+fi
+
+sink_rum=""
+if [ -n "$DK_SINK_R" ]; then
+  sink_rum=$DK_SINK_R
+fi
+
+sink_security=""
+if [ -n "$DK_SINK_S" ]; then
+  sink_security=$DK_SINK_S
+fi
+
 ##################
 # Try install...
 ##################
