helm 配置管理最佳实践

--- a/charts/datakit/templates/configmap.yaml
+++ b/charts/datakit/templates/configmap.yaml
@@ -14,3 +14,19 @@ data:
   {{- end }}
 {{- end }}
 {{- end }}
+
+
+---
+{{- if .Values.dkconfig }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: datakit-conf
+  # namespace: {{ .Values.namespace }}
+data:
+  {{- range $index, $vaule := .Values.dkconfig }}
+  {{- with $vaule }}
+  {{ .name }}: |- {{ .value | nindent 4  }}
+  {{- end }}
+  {{- end }}
+  {{- end }}
