--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -52,3 +52,27 @@ service:
   type: ClusterIP
   port: 9529
 
+dkconfig: []
+#  - path: "/usr/local/datakit/conf.d/db/mysql.conf"
+#    name: mysql.conf
+#    value: |
+#      # {"version": "1.1.9-rc7.1", "desc": "do NOT edit this line"}
+#      [[inputs.mysql]]
+#        host = "192.168.0.3"
+#        user = "root"
+#        pass = "S6QgMvrer2!8xvMD"
+#        port = 3306
+#        interval = "10s"
+#        innodb = true
+#        tables = []
+#        users = []
+#        [inputs.mysql.dbm_metric]
+#          enabled = true
+#        ## 监控采样配置
+#        [inputs.mysql.dbm_sample]
+#          enabled = true
+#        [inputs.mysql.tags]
+#          # some_tag = "some_value"
+#          # more_tag = "some_other_value"
+#
+
