--- a/yuque_testing.yml
+++ b/yuque_testing.yml
@@ -1,3 +1,3 @@
 # 配置请参考：https://www.yuque.com/waquehq/docs/configuration
-repo: 'dataflux/cd74oo' # for testing yuque repo
+repo: 'dataflux/vu476c' # for testing yuque repo
 pattern: '.docs/*.md'
