--- a/install.sh.template
+++ b/install.sh.template
@@ -257,9 +257,9 @@ if [ -n "$DK_LIMIT_MEMMAX" ]; then
   limit_memmax=$DK_LIMIT_MEMMAX
 fi
 
-cgroup_enabled=0
-if [ -n "$DK_CGROUP_ENABLED" ]; then
-  cgroup_enabled=1
+cgroup_disabled=0
+if [ -n "$DK_CGROUP_DISABLED" ]; then
+  cgroup_disabled=1
 fi
 
 install_log=/var/log/datakit/install.log
@@ -368,8 +368,8 @@ else
 			--git-pull-interval="${git_pull_interval}" \
 			--limit-cpumax="${limit_cpumax}"           \
 			--limit-cpumin="${limit_cpumin}"           \
-			--limit-memmax="${limit_memmax}"           \
-			--cgroup-enabled="${cgroup_enabled}"       \
+			--limit-mem="${limit_memmax}"              \
+			--cgroup-disabled="${cgroup_disabled}"     \
 			--enable-election="${enable_election}"     \
 			--rum-origin-ip-header="${rum_origin_ip_header}" \
 			--disable-404page="${disable_404page}"           \
