--- a/install.sh.template
+++ b/install.sh.template
@@ -196,6 +196,16 @@ if [ -n "$DK_DCA_ENABLE" ]; then
 	fi
 fi
 
+enable_pprof=""
+if [ -n "$DK_ENABLE_PPROF" ]; then
+	enable_pprof=$DK_ENABLE_PPROF
+fi
+
+pprof_listen=""
+if [ -n "$DK_PPROF_LISTEN" ]; then
+	pprof_listen=$DK_PPROF_LISTEN
+fi
+
 ipdb_type=""
 if [ -n "$DK_INSTALL_IPDB" ]; then
 	ipdb_type=$DK_INSTALL_IPDB
@@ -353,8 +363,8 @@ if [ "$upgrade" ]; then
 		--upgrade --proxy="${proxy}" --env_enable_experimental=${env_enable_experimental} | $sudo_cmd tee ${install_log}
 else
 	printf "${BLU}\n* Installing DataKit...${CLR}\n"
-		$sudo_cmd $installer                         \
-		  --install-only="$install_only"             \
+		$sudo_cmd $installer                           \
+		  --install-only="$install_only"               \
 			--dataway="${dataway}"                     \
 			--global-tags="${global_tags}"             \
 			--cloud-provider="${cloud_provider}"       \
@@ -366,6 +376,8 @@ else
 			--dca-enable="${dca_enable}"               \
 			--dca-listen="${dca_listen}"               \
 			--dca-white-list="${dca_white_list}"       \
+			--enable-pprof="${enable_pprof}"           \
+			--pprof-listen="${pprof_listen}"           \
 			--install-externals="${install_externals}" \
 			--git-url="${git_url}"                     \
 			--git-key-path="${git_key_path}"           \
