--- a/charts/datakit/Chart.yaml
+++ b/charts/datakit/Chart.yaml
@@ -1,3 +1,7 @@
+annotations:
+  catalog.cattle.io/certified: partner # Enables the "partner" badge in the UI for easier identification
+  catalog.cattle.io/release-name: datakit # Your chart's name in kebab-case, this is used for deployment
+  catalog.cattle.io/display-name: DataKit # The chart's name you want displayed in the UI
 apiVersion: v2
 appVersion: 1.2.10
 description: Chart for the DaemonSet DataKit
