--- a/charts/datakit/templates/serviceaccount.yaml
+++ b/charts/datakit/templates/serviceaccount.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "datakit.serviceAccountName" . }}
+  name: {{ include "datakit.fullname" . }}
 
 
