--- a/.golangci.toml
+++ b/.golangci.toml
@@ -2,7 +2,10 @@
 timeout = "10m"
 issues-exit-code = 1
 skip-files = []
-skip-dirs = []
+skip-dirs = [
+	# TODO: we should add lint check on the package
+	"internal/obfuscate"
+]
 
 [linters-settings]
 
