--- a/charts/datakit/templates/clusterrolebinding.yaml
+++ b/charts/datakit/templates/clusterrolebinding.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ include "datakit.fullname" . }}
-  namespace: default
+  namespace: {{ .Release.Namespace }}
