helm  containerd-socket 添加

--- a/charts/datakit/templates/daemonset.yaml
+++ b/charts/datakit/templates/daemonset.yaml
@@ -83,6 +83,9 @@ spec:
             - mountPath: /var/run/docker.sock
               name: docker-socket
               readOnly: true
+            - mountPath: /var/run/containerd/containerd.sock
+              name: containerd-socket
+              readOnly: true
             - mountPath: /host/proc
               name: proc
               readOnly: true
@@ -128,6 +131,9 @@ spec:
         - hostPath:
             path: /var/run/docker.sock
           name: docker-socket
+        - hostPath:
+            path: /var/run/containerd/containerd.sock
+          name: containerd-socket
         - hostPath:
             path: /proc
             type: ""
