--- a/charts/datakit/templates/daemonset.yaml
+++ b/charts/datakit/templates/daemonset.yaml
@@ -80,12 +80,8 @@ spec:
           securityContext:
             privileged: true
           volumeMounts:
-            - mountPath: /var/run/docker.sock
-              name: docker-socket
-              readOnly: true
-            - mountPath: /var/run/containerd/containerd.sock
-              name: containerd-socket
-              readOnly: true
+            - mountPath: /var/run
+              name: run
             - mountPath: /host/proc
               name: proc
               readOnly: true
