--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 before_script:
   - rm -rf /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit
   - mkdir -p /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit
-  - cp -r ./. /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit
+  - mv ./. /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit
   - cd /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit
   - source ~/.ossenv
 
