--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,15 +4,73 @@ before_script:
   - cp -r ./. /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit
   - cd /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit
   - source ~/.ossenv
+  - echo $DK_BPF_KERNEL_SRC_PATH
 
 variables:
   PROJECT: "datakit"
 
 stages:
+  - test
+  - deploy_ebpf
   - deploy
+
+dk-test-production:
+  stage: test
+  only:
+    - master
+    - unstable
+  script:
+    - make clean
+    - make production_notify GIT_BRANCH=$CI_COMMIT_BRANCH
+    - make lint
+    - make all_test
+  tags:
+    - cloudcare-ft
+
+dk-test-testing:
+  stage: test
+  only:
+    - testing
+    - hotfix
+    - /^testing-.*$/
+  script:
+    - make clean
+    - make testing_notify GIT_BRANCH=$CI_COMMIT_BRANCH
+    - make lint
+    - make all_test
+  tags:
+    - cloudcare-ft
+
+release-ebpf-testing:
+  stage: deploy_ebpf
+  needs: [dk-test-testing]
+  image: vircoys/datakit-developer:1.3
+  only:
+    - testing
+    - hotfix
+    - /^testing-.*$/
+  script:
+    - make clean
+    - make pub_epbf_testing DATAKIT_EBPF_ARCHS="linux/arm64" GIT_BRANCH=$CI_COMMIT_BRANCH
+  tags:
+    - dk-arm-docker-runner
+
+release-ebpf-production:
+  stage: deploy_ebpf
+  needs: [dk-test-production]
+  image: vircoys/datakit-developer:1.3
+  only:
+    - master
+    - unstable
+  script:
+    - make clean
+    - make pub_ebpf_production DATAKIT_EBPF_ARCHS="linux/arm64" GIT_BRANCH=$CI_COMMIT_BRANCH
+  tags:
+    - dk-arm-docker-runner
 
 release-testing:
   stage: deploy
+  needs: [dk-test-testing, release-ebpf-testing]
   only:
     - testing
     - hotfix
@@ -20,16 +78,15 @@ release-testing:
   script:
     # building && publish testing
     - make clean
-    - make lint
-    - make all_test
     - make testing GIT_BRANCH=$CI_COMMIT_BRANCH # do not set VERSION here, use git version
     - make check_testing_conf_compatible
-    - make testing_image
+    - make testing_image IGN_EBPF_INSTALL_ERR=1
   tags:
     - cloudcare-ft
 
 release-stable:
   stage: deploy
+  needs: [dk-test-production, release-ebpf-production]
   only:
     - master
   script:
@@ -45,12 +102,11 @@ release-stable:
 
 release-unstable:
   stage: deploy
+  needs: [dk-test-production, release-ebpf-production]
   only:
     - unstable # 专用分支来发布 unstable 版本
   script:
-    - make clean
-    - make lint
-    - make all_test
+    - make clean                      
     - make production GIT_BRANCH=$CI_COMMIT_BRANCH VERSION=1.3.0
     - make check_production_conf_compatible
     - make production_image VERSION=1.3.0
