修复helm run挂载和文档问题

--- a/charts/datakit/templates/daemonset.yaml
+++ b/charts/datakit/templates/daemonset.yaml
@@ -125,6 +125,9 @@ spec:
             name: datakit-conf
           name: datakit-conf
         - hostPath:
+            path: /var/run
+          name: run
+        - hostPath:
             path: /var/run/docker.sock
           name: docker-socket
         - hostPath:
